# devcontainers

./: README.md
ansible/.devcontainer/: Dockerfile  devcontainer.json
beancount/: example.beancount  requirements.txt
beancount/.devcontainer/: devcontainer.json
rust/: .gitignore  Cargo.toml  README.md
rust/.devcontainer/: devcontainer.json  docker-compose.yaml  docker-compose.yml  env.example
rust_base/: .gitignore  Cargo.toml  README.md
rust_base/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
rust_base/src/: main.rs
