[package]
name = "rust_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path ="./src/lib/lib.rs"

# Some dependencies to check build in container
[dependencies]
config = { version = "0.14.0", default-features = false, features = ["toml"] }
env_logger = "0.11.1"
log = "0.4.20"
serde = { version="1.0.193", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }